[tool.poetry]
name = "pythainav"
version = "0.1.3"
description = "a Python interface to pull thai mutual fund NAV"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
maintainers = ["Nutchanon Ninyawee <me@nutchanon.org>"]
readme = 'README.md'
repository = "https://github.com/CircleOnCircles/pythainav"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests-html = "^0.10.0"
furl = "^2.1"
dateparser = "^0.7.2"
dataclasses = {version = "^0.7.0", python = "3.6"}

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[tool.black]
line-length = 127

[tool.isort]
line_length = 127
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
filter_files = true

known_first_party = "pythainav"
known_third_party = [
    "pytest",
    "requests",
    "requests_toolbelt",
    "dateparser",
    "furl"
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
