[tool.poetry]
name = "pythainav"
version = "0.1.5"
description = "a Python interface to pull thai mutual fund NAV"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
maintainers = ["Nutchanon Ninyawee <me@nutchanon.org>"]
readme = 'README.md'
repository = "https://github.com/CircleOnCircles/pythainav"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.8"
furl = "^2.1"
dateparser = "^0.7.2"
dataclasses = {version = "^0.7.0", python = "3.6"}
requests = "^2.22"
fuzzywuzzy = {extras = ["speedup"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.3"
mkdocs = "^1.0"
mkdocs-material = "^4.6"
pygments = "^2.5"
pymdown-extensions = "^6.2"
mkautodoc = "^0.1.0"
pandas = "^1.0.1"
httpretty = "^1.0.2"
mock = "^4.0.2"
factory_boy = "^2.12.0"

[tool.black]
line-length = 127

[tool.isort]
line_length = 127
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
filter_files = true

known_first_party = "pythainav"
known_third_party = [
    "pytest",
    "requests",
    "requests_toolbelt",
    "dateparser",
    "furl"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
