[tool.poetry]
name = "pythainav"
version = "0.2.0"
description = "a Python interface to pull thai mutual fund NAV"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
maintainers = ["Nutchanon Ninyawee <me@nutchanon.org>"]
readme = 'README.md'
repository = "https://github.com/CircleOnCircles/pythainav"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
furl = "^2.1"
dateparser = "^1.0.0"
dataclasses = {version = "^0.7.0", python = "3.6"}
requests = "^2.22"
fuzzywuzzy = {extras = ["speedup"], version = ">=0.17,<0.19"}
importlib-metadata = "^4.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pygments = "^2.7"
pymdown-extensions = "^8.0"
mkautodoc = "^0.1.0"
pandas = "^1.0.1"
pre-commit = "^2.8.2"
pyupgrade = "^2.7.3"
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^0.790"
bandit = "^1.6.2"
safety = "^1.9.0"
pylint = "^2.6.0"
pydocstyle = "^6.1.1"
python-decouple = "^3.3"
httpretty = "^1.0.2"
mkdocs-material = "^7.3.0"
mkdocs = "^1.2.2"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
